--- a/src/components/App/app.sass
+++ b/src/components/App/app.sass
@@ -12,6 +12,7 @@
   text-align: center
   margin: 3em auto
   border: 1px solid $border-color
+  
 
   &-title
     font-weight: 700
@@ -22,3 +23,22 @@
     color: #55b1f3
     font-style: italic
     font-size: 1.2em
+
+.input 
+  height: 50px
+  width: 100%
+  margin: 2rem auto
+
+.taskCounter
+  font-weight: bold
+  border-bottom: 1px solid black
+  padding: 1rem
+  margin-bottom: 1rem
+  
+.task
+  border: 1px solid black
+  border-radius: 5px
+  height: 50px
+  width: 50%
+  margin: auto
+  padding-top: calc(25px - 8px)
