--- a/src/components/App/app.sass
+++ b/src/components/App/app.sass
@@ -38,7 +38,9 @@
 .task
   border: 1px solid black
   border-radius: 5px
-  height: 50px
+  margin: 1rem auto
   width: 50%
-  margin: auto
   padding-top: calc(25px - 8px)
+
+.done
+  background-color: lightgrey
